--- a/microlauncher.conf
+++ b/microlauncher.conf
@@ -68,6 +68,8 @@ set result-content-selected-background 0xFF373737;
 
 set which-monitor pointer;
 set font "-misc-fixed-medium-r-semicondensed--13-*-*-*-*-*-iso10646-1";
+set maximum-result-amount 10;
+set result-allow-circular-navigation true;
 
 // b-keycode none | shift | caps | control | mod-1 | mod-2 | mod-3 | mod-4 | mod-5 | any xyz execute string | command
 
@@ -138,16 +140,9 @@ grab-keycode                       control                                      
 grab-keycode none                                                                        118 toggle-insert-mode;
 grab-keycode none                                                                         90 toggle-insert-mode;
 
+grab-keycode none                                                                         23 paste-result;
+
 grab-keycode none                                                                         36 launch;
 grab-keycode none                                                                        104 launch;
 
 grab-keycode none                                                                          9 exit;
-
-
-
-
-
-
-
-
-
